[package]
name = "petstore"
description = "Simple petstore example api"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Netwo <oss@netwo.com>"]

[dependencies]
actix-web = "4"
env_logger = "0.11"
futures = "0.3"
num-traits = "0.2"
rust_decimal = "1"
schemars = { version = "1.0.0-alpha.2", features = ["chrono04", "uuid1", "url2", "rust_decimal1"] }
serde = { version = "1.0", features = ["derive"] }
serde_qs = { version = "0.13", features = ["actix4"] }
uuid = { version = "1", features = ["serde", "v4"] }
url = { version = "2", features = ["serde"] }

apistos = { path = "../../apistos", features = ["extras", "qs_query"] }

[workspace]
