[package]
name = "petstore"
description = "Simple petstore example api"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Netwo <oss@netwo.com>"]

[dependencies]
actix-web = "4"
env_logger = "0.11"
futures = "0.3"
num-traits = "0.2"
rust_decimal = "1"
schemars = { package = "apistos-schemars", version = "0.8", features = ["chrono", "uuid1", "url", "rust_decimal"] }
serde = { version = "1.0", features = ["derive"] }
serde_qs = { version = "0.14", features = ["actix4"] }
uuid = { version = "1", features = ["serde", "v4"] }
url = { version = "2", features = ["serde"] }

apistos = { path = "../../apistos", features = ["extras", "qs_query"] }

[workspace]
