[package]
name = "simple-shuttle-rs"
description = "Simple TODO example api with shuttle rs runtime"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Netwo <oss@netwo.com>"]

[dependencies]
actix-web = "4"
apistos = { path = "../../apistos", features = ["extras", "qs_query", "rapidoc", "redoc", "swagger-ui"] }
apistos-shuttle = { path = "../../apistos-shuttle" }
schemars = { version = "1.0.0-alpha.8", features = ["chrono04", "uuid1", "url2", "rust_decimal1"] }
serde = { version = "1.0", features = ["derive"] }
shuttle-runtime = { version = "0.47", default-features = false }
uuid = { version = "1", features = ["serde", "v4"] }

[workspace]
